# algoritmos-1

./: .gitignore
Labo/Algoritmos1-Laboratorio/: CMakeLists.txt  main.cpp
Labo/Labo01/ejemplos/: main.cpp
Labo/Labo01/ejercicios/: ejercicios  ejercicios.cpp  fibonacci  fibonacci.cpp
Labo/Labo01/entregas/: fibonacci  fibonacci.cpp
Labo/Labo02/ejercicios/: ejercicio1  ejercicio1.cpp
Labo/Labo02/entregas/: division  division.cpp  swap  swap.cpp
Labo/Labo03/: pruebas_vectores  pruebas_vectores.cpp
Labo/Labo03/entregas/: estaOrdenado.cpp  rotar.cpp
Labo/Labo03/template-vsc/: CMakeLists.txt  main.cpp  vectores.cpp  (+1 more)
Labo/Labo07/template_alumnos/: CMakeLists.txt  cases.cpp  ejercicios.cpp  main.cpp
Labo/Labo07/template_alumnos/Test/: diferenciaDiagonalesTest.cpp  multiplicarTest.cpp  productoVectorialTest.cpp  trasponerTest.cpp
Labo/Labo09/: labo9.md
Parcial/: p1.slspec
Parciales/: recu_28_06_21.slspec  solucion
Practicas/: dudas.txt
Practicas/practica1/: p1.pdf.xoj
Practicas/practica3/: practica3.slspec
Practicas/practica4/: practica4.slspec  practica4.tex
Practicas/practica5/: practica5.slspec
Practicas/practica6/: practica6.slspec
Practicas/practica7/: p7.cpp
Practicas/practica8/: p8.cpp  p8.slspec
Practicas/practica9/: p9.cpp
Practicas/practica9/p9-clion/: CMakeLists.txt  notas.txt  notasEj5.txt  p9
Practicas/practica9/p9-clion/auxiliares/: ej10.cpp  ej10.h  ej13.txt  ej14.cpp  ej14.h  ej16.cpp  ej16.h  ej17.cpp  ej17.h  ej18.cpp  ej18.h  ej3.cpp  ej3.h  ej4.cpp  ej4.h  ej5.h  ej6.cpp  ej6.h  ej7.cpp  ej7.h  ej9.cpp  ej9.h
Practicas/practica9/p9-clion/test/: ejercicio10TEST.cpp  ejercicio14TEST.cpp  ejercicio16TEST.cpp  ejercicio17TEST.cpp  ejercicio18TEST.cpp  ejercicio4TEST.cpp  ejercicio6TEST.cpp  ejercicio7TEST.cpp  ejercicio9TEST.cpp
TP/: tp.slspec
TP/template-alumnos/: solucion.tex
Teoricas/: videos-teoricas.md
(+67 files in other folders)
